--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "email-validator": "^2.0.4",
     "firebase": "^9.2.0",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
