--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
